      do all of their connections protected by TLS.
    - Add an HSAuthorityRecordStats option that hidden service authorities
      can use to track statistics of overall hidden service usage without
      logging information that would be very useful to an attacker.
    - Start work implementing proposal 103: Add a standalone tool to
      generate key certificates.

  o Security fixes:
    - Directory authorities now call routers stable if they have an
      uptime of at least 30 days, even if that's not the median uptime
      in the network. Implements proposal 107, suggested by Kevin Bauer
      and Damon McCoy.

  o Crash fixes:
    - If a directory server runs out of space in the connection table
      as it's processing a begin_dir request, it will free the exit stream
      but leave it attached to the circuit, leading to unpredictable
      behavior. (Reported by seeess, fixes bug 425.)
    - Fix a bug in dirserv_remove_invalid() that would cause authorities
      to corrupt memory under some really unlikely scenarios.

  o Major bugfixes:
    - If a directory authority is down, skip it when deciding where to get
      networkstatus objects or descriptors. Otherwise we keep asking
      every 10 seconds forever. Fixes bug 384.
    - Count it as a failure if we fetch a valid network-status but we 
      don't want to keep it. Otherwise we'll keep fetching it and keep
      not wanting to keep it. Fixes part of bug 422.
    - If all of our dirservers have given us bad or no networkstatuses 
      lately, then stop hammering them once per minute even when we
      think they're failed. Fixes another part of bug 422.
    - Back off correctly when downloading servers.  (Previously, we would
      never actually increment the failure count for descriptors we were in
      the process of retrieving.)

  o Minor fixes (resource management):
    - Count the number of open sockets separately from the number